--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section class="intro-section" id="home">
     <div class="intro-container">
-      <img src="josiah2.jpg" alt="Josiah Kyle Feliciano" class="intro-image" />
+      <img src="img/josiah2.jpg" alt="Josiah Kyle Feliciano" class="intro-image" />
       <div class="intro-text">
         <h2>Hello, I'm</h2>
         <h1>Josiah Kyle Feliciano</h1>
