--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
         <div class="intro-socials">
           <a href="https://www.instagram.com/kylefeliciano42" target="_blank">
-            <img src="img/instagram.png" alt="Instagram" />
+            <img src="instagram.png" alt="Instagram" />
           </a>
           <a href="https://www.linkedin.com/in/josiah-kyle-feliciano-b2a435343/" target="_blank">
-            <img src="img/linkedin.png" alt="LinkedIn" />
+            <img src="linkedin.png" alt="LinkedIn" />
           </a>
         </div>
 
@@ -47,7 +47,7 @@
   </section>
 
   <div class="main-content" id="about">
-    <img src="img/josiah.png" alt="Your Photo" />
+    <img src="josiah.png" alt="Your Photo" />
     <div class="about-text">
       <h1>Josiah Kyle Feliciano - Film Producer</h1>
       <h2>About me:</h2>
@@ -60,7 +60,7 @@
   <section id="films">
     <h1 class="section-title">Film(s)</h1>
     <div class="main-content">
-      <img src="img/movietitle.png" alt="Under Seventh Heaven Poster" />
+      <img src="movietitle.png" alt="Under Seventh Heaven Poster" />
       <div class="about-text">
         <h2>Under Seventh Heaven</h2>
         <p>
@@ -102,10 +102,10 @@
   <footer>
     <div class="footer-content">
       <a href="https://www.instagram.com/kylefeliciano42" target="_blank" aria-label="Instagram">
-        <img src="img/instagram.png" alt="Instagram" />
+        <img src="instagram.png" alt="Instagram" />
       </a>
       <a href="https://www.linkedin.com/in/josiah-kyle-feliciano-b2a435343/">
-        <img src="img/linkedin.png" alt="LinkedIn" />
+        <img src="linkedin.png" alt="LinkedIn" />
       </a>
     </div>
   </footer>
