--- a/index.html
+++ b/index.html
@@ -18,6 +18,41 @@
         <a href="#contact">Contact</a>
       </nav>
     </div>
+
+    <div class="main-content">
+    <img src="img/dollarandadream.png" alt="A Dollar and a Dream Poster" />
+    <div class="about-text">
+      <h2>A Dollar and a Dream</h2>
+      <p>
+        A documentary on a Sunday service charity organization that helps the underserved people of the San Diego community.
+        Co-produced and edited by Josiah Kyle Feliciano.
+      </p>
+    </div>
+  </div>
+
+  <div class="main-content">
+    <img src="img/mangkukulam.png" alt="Mangkukulam Poster" />
+    <div class="about-text">
+      <h2>Mangkukulam</h2>
+      <p>
+        Isabella, a resilient single mother, is desperate to buy a crib for her baby, but her ex-boyfriend hasn't kept his financial promises.
+        After stealing from a mysterious woman, she finds herself cursed by a mangkukulam—a practitioner of black magic.
+        A chilling tale of guilt and supernatural consequences.
+        Produced, directed, written, and edited by Josiah Kyle Feliciano.
+      </p>
+    </div>
+  </div>
+
+  <div class="main-content">
+    <img src="img/yousnoozeyoulose.png" alt="You Snooze, You Lose Poster" />
+    <div class="about-text">
+      <h2>You Snooze, You Lose</h2>
+      <p>
+        A girl's sleepover goes as planned… or does it? A mysterious and playful short film.
+        Produced by Josiah Kyle Feliciano.
+      </p>
+    </div>
+  </div>
   </header>
 
   <section class="intro-section" id="home">
