--- a/index.html
+++ b/index.html
@@ -18,53 +18,18 @@
         <a href="#contact">Contact</a>
       </nav>
     </div>
-
-    <div class="main-content">
-    <img src="img/dollarandadream.png" alt="A Dollar and a Dream Poster" />
-    <div class="about-text">
-      <h2>A Dollar and a Dream</h2>
-      <p>
-        A documentary on a Sunday service charity organization that helps the underserved people of the San Diego community.
-        Co-produced and edited by Josiah Kyle Feliciano.
-      </p>
-    </div>
-  </div>
-
-  <div class="main-content">
-    <img src="img/mangkukulam.png" alt="Mangkukulam Poster" />
-    <div class="about-text">
-      <h2>Mangkukulam</h2>
-      <p>
-        Isabella, a resilient single mother, is desperate to buy a crib for her baby, but her ex-boyfriend hasn't kept his financial promises.
-        After stealing from a mysterious woman, she finds herself cursed by a mangkukulam—a practitioner of black magic.
-        A chilling tale of guilt and supernatural consequences.
-        Produced, directed, written, and edited by Josiah Kyle Feliciano.
-      </p>
-    </div>
-  </div>
-
-  <div class="main-content">
-    <img src="img/yousnoozeyoulose.png" alt="You Snooze, You Lose Poster" />
-    <div class="about-text">
-      <h2>You Snooze, You Lose</h2>
-      <p>
-        A girl's sleepover goes as planned… or does it? A mysterious and playful short film.
-        Produced by Josiah Kyle Feliciano.
-      </p>
-    </div>
-  </div>
   </header>
 
   <section class="intro-section" id="home">
     <div class="intro-container">
-      <img src="img/josiah2.jpg" alt="Josiah Kyle Feliciano" class="intro-image" />
+      <img src="img/josiah4.jpg" alt="Josiah Kyle Feliciano" class="intro-image" />
       <div class="intro-text">
         <h2>Hello, I'm</h2>
         <h1>Josiah Kyle Feliciano</h1>
         <h3>Film Producer</h3>
 
         <div class="intro-buttons">
-          <a href="resume.pdf" class="btn" download>Download CV</a>
+          <a href="JosiahKyleFelicianoResume.pdf" class="btn" download>Download Resume</a>
           <a href="#contact" class="btn btn-outline">Contact Me</a>
         </div>
 
@@ -82,29 +47,82 @@
   </section>
 
   <div class="main-content" id="about">
-    <img src="img/josiah.png" alt="Your Photo" />
+    <div class="image-stack">
+      <img src="img/josiah.png" alt="Your Photo" />
+      <img src="img/josiah2.JPG" alt="Another Photo" />
+      <img src="img/josiah5.JPG" alt="Third Photo" />
+    </div>
     <div class="about-text">
       <h1>Josiah Kyle Feliciano - Film Producer</h1>
       <h2>About me:</h2>
-      <p>Hi, I am Josiah Kyle Feliciano–currently a senior at San Diego State, majoring in Film, Television, and Media Arts with an emphasis in production. I am projected to graduate in Spring 2025, and I have an insatiable passion for producing movies and alleviating colleagues’ workloads.      </p>
+      <p>Hi, I am Josiah Kyle Feliciano–currently a senior at San Diego State, majoring in Television, Film, and New Media Studies with an emphasis in production. I am projected to graduate in Spring 2025, and I have an insatiable passion for producing movies and alleviating colleagues’ workloads.      </p>
       <p>Currently, I am interning for the MCIAT studio in San Diego, where I handle and manage the company’s library system while also tending to other clerical tasks. In terms of school, I have produced two short films, one of which was selected at the SDSU Emerging Filmmakers Showcase (currently, I am producing two more). I also have experience with producing documentaries; I co-produced two while producing the aforementioned short films. All in all, I am a strong project manager who excels at multitasking and meeting deadlines. </p>
       <p>My most recent film, Under Seventh Heaven, is an AAPI romance with LGBTQIA+ themes. The director, Shane Bennett, and I look forward to submitting it to festivals this year.       </p>
     </div>
   </div>
 
   <section id="films">
-    <h1 class="section-title">Film(s)</h1>
+    <h1 class="section-title">Films</h1>
+
     <div class="main-content">
-      <img src="img/movietitle.png" alt="Under Seventh Heaven Poster" />
+      <img src="img/movietitle1.png" alt="Tethered Poster" />
       <div class="about-text">
-        <h2>Under Seventh Heaven</h2>
+        <h2>Tethered | Producer | Assistant Director</h2>
+        <p>
+          Jane is trapped in a complicated family dynamic. With her mother being ill and nonverbal, her father’s dominant, challenging presence creates constant tension in the household, leading to frequent toxic and unhealthy encounters. Jane must decide whether to finally seize her chance at freedom or remain a slave to her father’s will.
+
+        </p>
+      </div>
+    </div>
+
+    <div class="main-content">
+      <img src="img/movietitle2.png" alt="Under Seventh Heaven Poster" />
+      <div class="about-text">
+        <h2>Under Seventh Heaven | Producer</h2>
         <p>
           A touching AAPI romance exploring LGBTQIA+ themes, <em>Under Seventh Heaven</em> delves into love, identity, and acceptance.
           Produced by Josiah Kyle Feliciano and directed by Shane Bennett, the film is set for submission to multiple festivals this year.
         </p>
       </div>
     </div>
+
+    <div class="main-content">
+      <a href="https://vimeo.com/1056975532" target="_blank">
+        <img src="img/movietitle3.jpg" alt="A Dollar and a Dream Poster" />
+      </a>
+      <div class="about-text">
+        <h2>A Dollar and a Dream | Co-producer | Editor</h2>
+        <p>
+          A documentary on a Sunday service charity organization that helps the underserved people of the San Diego Community. 
+        </p>
+      </div>
+    </div>
+  
+    <div class="main-content">
+      <a href="https://drive.google.com/file/d/1o5-HfmEVhraEnkJsiwWl8IaL0ZLM98ht/view?usp=sharing " target="_blank">
+        <img src="img/movietitle4.png" alt="Mangkukulam Poster" />
+      </a>
+      <div class="about-text">
+        <h2>Mangkukulam | Producer | Director | Writer | Editor</h2>
+        <p>
+          Isabella, a resilient single mother in her twenties, is desperate to buy a crib for her baby, but her ex-boyfriend has yet to fulfill his financial promises. While walking through the city, she encounters a poor woman in a rocking chair. Isabella steals one hundred dollars from the woman’s “help jar,” unaware that this woman is a mangkukulam—a practitioner of black magic. Now, Isabella must face the haunting consequences of her actions, as an ancient curse threatens her and her baby boy. 
+        </p>
+      </div>
+    </div>
+  
+    <div class="main-content">
+      <a href="https://drive.google.com/file/d/1NmUHEcNdsiO83AlTNk_8BfQPyTnYXyV2/view?usp=sharing" target="_blank">
+        <img src="img/movietitle5.png" alt="You Snooze, You Lose Poster" />
+      </a>
+      <div class="about-text">
+        <h2>You Snooze, You Lose | Producer</h2>
+        <p>
+          A girl's sleepover goes as planned. 
+        </p>
+      </div>
+    </div>
   </section>
+
   <section id="contact">
     <h1 class="section-title">Contact Me</h1>
     <form class="contact-form" action="#" method="POST">
