--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section class="intro-section" id="home">
     <div class="intro-container">
-      <img src="img/josiah4.jpg" alt="Josiah Kyle Feliciano" class="intro-image" />
+      <img src="img/josiah4.JPG" alt="Josiah Kyle Feliciano" class="intro-image" />
       <div class="intro-text">
         <h2>Hello, I'm</h2>
         <h1>Josiah Kyle Feliciano</h1>
@@ -49,7 +49,7 @@
   <div class="main-content" id="about">
     <div class="image-stack">
       <img src="img/josiah.png" alt="Your Photo" />
-      <img src="img/josiah2.JPG" alt="Another Photo" />
+      <img src="img/josiah2.jpg" alt="Another Photo" />
       <img src="img/josiah5.JPG" alt="Third Photo" />
     </div>
     <div class="about-text">
