--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="main-content">
       <img src="img/movietitle1.png" alt="Tethered Poster" />
       <div class="about-text">
-        <h2>Tethered | Producer | Assistant Director</h2>
+        <h2>Producer | Assistant Director</h2>
         <p>
           Jane is trapped in a complicated family dynamic. With her mother being ill and nonverbal, her father’s dominant, challenging presence creates constant tension in the household, leading to frequent toxic and unhealthy encounters. Jane must decide whether to finally seize her chance at freedom or remain a slave to her father’s will.
 
@@ -78,7 +78,7 @@
     <div class="main-content">
       <img src="img/movietitle2.png" alt="Under Seventh Heaven Poster" />
       <div class="about-text">
-        <h2>Under Seventh Heaven | Producer</h2>
+        <h2>Producer</h2>
         <p>
           A touching AAPI romance exploring LGBTQIA+ themes, <em>Under Seventh Heaven</em> delves into love, identity, and acceptance.
           Produced by Josiah Kyle Feliciano and directed by Shane Bennett, the film is set for submission to multiple festivals this year.
@@ -91,7 +91,7 @@
         <img src="img/movietitle3.jpg" alt="A Dollar and a Dream Poster" />
       </a>
       <div class="about-text">
-        <h2>A Dollar and a Dream | Co-producer | Editor</h2>
+        <h2>Co-producer | Editor</h2>
         <p>
           A documentary on a Sunday service charity organization that helps the underserved people of the San Diego Community. 
         </p>
@@ -103,7 +103,7 @@
         <img src="img/movietitle4.png" alt="Mangkukulam Poster" />
       </a>
       <div class="about-text">
-        <h2>Mangkukulam | Producer | Director | Writer | Editor</h2>
+        <h2>Producer | Director | Writer | Editor</h2>
         <p>
           Isabella, a resilient single mother in her twenties, is desperate to buy a crib for her baby, but her ex-boyfriend has yet to fulfill his financial promises. While walking through the city, she encounters a poor woman in a rocking chair. Isabella steals one hundred dollars from the woman’s “help jar,” unaware that this woman is a mangkukulam—a practitioner of black magic. Now, Isabella must face the haunting consequences of her actions, as an ancient curse threatens her and her baby boy. 
         </p>
@@ -115,7 +115,7 @@
         <img src="img/movietitle5.png" alt="You Snooze, You Lose Poster" />
       </a>
       <div class="about-text">
-        <h2>You Snooze, You Lose | Producer</h2>
+        <h2>Producer</h2>
         <p>
           A girl's sleepover goes as planned. 
         </p>
