--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
   <div class="main-content" id="about">
     <div class="image-stack">
       <img src="img/josiah.png" alt="Your Photo" />
-      <img src="img/josiah2.jpg" alt="Another Photo" />
       <img src="img/josiah5.JPG" alt="Third Photo" />
     </div>
     <div class="about-text">
@@ -67,7 +66,7 @@
     <div class="main-content">
       <img src="img/movietitle1.png" alt="Tethered Poster" />
       <div class="about-text">
-        <h2>Producer | Assistant Director</h2>
+        <h2>Producer | Assistant Director | Expected June 2025</h2>
         <p>
           Jane is trapped in a complicated family dynamic. With her mother being ill and nonverbal, her father’s dominant, challenging presence creates constant tension in the household, leading to frequent toxic and unhealthy encounters. Jane must decide whether to finally seize her chance at freedom or remain a slave to her father’s will.
 
@@ -78,7 +77,7 @@
     <div class="main-content">
       <img src="img/movietitle2.png" alt="Under Seventh Heaven Poster" />
       <div class="about-text">
-        <h2>Producer</h2>
+        <h2>Producer | Circulating Festivals 2025-26</h2>
         <p>
           A touching AAPI romance exploring LGBTQIA+ themes, <em>Under Seventh Heaven</em> delves into love, identity, and acceptance.
           Produced by Josiah Kyle Feliciano and directed by Shane Bennett, the film is set for submission to multiple festivals this year.
