--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="about-text">
       <h1>Josiah Kyle Feliciano - Film Producer</h1>
       <h2>About me:</h2>
-      <p>Hi, I am Josiah Kyle Feliciano–currently a senior at San Diego State, majoring in Television, Film, and New Media Studies with an emphasis in production. I am projected to graduate in Spring 2025, and I have an insatiable passion for producing movies and alleviating colleagues’ workloads.      </p>
-      <p>Currently, I am interning for the MCIAT studio in San Diego, where I handle and manage the company’s library system while also tending to other clerical tasks. In terms of school, I have produced two short films, one of which was selected at the SDSU Emerging Filmmakers Showcase (currently, I am producing two more). I also have experience with producing documentaries; I co-produced two while producing the aforementioned short films. All in all, I am a strong project manager who excels at multitasking and meeting deadlines. </p>
+      <p>Hi, I am Josiah Kyle Feliciano–currently interning for the MCIAT studio in San Diego, where I handle and manage the company’s library system while also tending to other clerical tasks. In terms of school, I have produced two short films, one of which was selected at the SDSU Emerging Filmmakers Showcase (currently, I am producing two more). I also have experience with producing documentaries; I co-produced two while producing the aforementioned short films. All in all, I am a strong project manager who excels at multitasking and meeting deadlines. </p>
+      <p>Currently a senior at San Diego State, majoring in Television, Film, and New Media Studies with an emphasis in production. I am projected to graduate in Spring 2025, and I have an insatiable passion for producing movies and alleviating colleagues’ workloads.      </p> </p>
       <p>My most recent film, Under Seventh Heaven, is an AAPI romance with LGBTQIA+ themes. The director, Shane Bennett, and I look forward to submitting it to festivals this year.       </p>
     </div>
   </div>
