--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section class="intro-section" id="home">
     <div class="intro-container">
-      <img src="img/josiah4.JPG" alt="Josiah Kyle Feliciano" class="intro-image" />
+      <img src="img/josiah2 copy.jpg" alt="Josiah Kyle Feliciano" class="intro-image" />
       <div class="intro-text">
         <h2>Hello, I'm</h2>
         <h1>Josiah Kyle Feliciano</h1>
@@ -54,9 +54,8 @@
     <div class="about-text">
       <h1>Josiah Kyle Feliciano - Film Producer</h1>
       <h2>About me:</h2>
-      <p>I am currently interning for the MCIAT studio in San Diego, where I handle and manage the company’s library system while also tending to other clerical tasks. In terms of school, I have produced two short films, one of which was selected at the SDSU Emerging Filmmakers Showcase (currently, I am producing two more). I also have experience with producing documentaries; I co-produced two while producing the aforementioned short films. All in all, I am a strong project manager who excels at multitasking and meeting deadlines. </p>
-      <p>I am currently a senior at San Diego State, majoring in Television, Film, and New Media Studies, with an emphasis in production. I am projected to graduate in Spring 2025, and I have an insatiable passion for producing movies and alleviating colleagues’ workloads.      </p> </p>
-      <p>My most recent film, Under Seventh Heaven, is an AAPI romance with LGBTQIA+ themes. The director, Shane Bennett, and I look forward to submitting it to festivals this year.       </p>
+      <p>I am a versatile film producer who has interned for the MCIAT studio in San Diego, where I handled and managed the company’s library system while also tending to other clerical tasks. In terms of school, I have produced four short films, three of which were selected at the SDSU Emerging Filmmakers Showcase. I also have experience with producing documentaries; I co-produced two while producing some of the aforementioned short films. All in all, I am a strong project manager who excels at multitasking and meeting deadlines. </p>
+      <p>I have graduated from San Diego State with a B.S. in Film, Television, and New Media with an emphasis in production. I specialize in producing and have an unconventional passion for alleviating the workloads of my colleagues.  </p>
     </div>
   </div>
 
