--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
     <h1 class="section-title">Films</h1>
 
     <div class="main-content">
-      <img src="img/movietitle1.png" alt="Tethered Poster" />
+      <a href="https://youtu.be/Igekekfw6qw?si=yWxAStC96Jj1h8zd" target="_blank">
+        <img src="img/movietitle1.png" alt="Tethered Poster" />
+      </a>
       <div class="about-text">
-        <h2>Producer | Assistant Director | Expected June 2025</h2>
+        <h2>Producer | Assistant Director </h2>
         <p>
           Jane is trapped in a complicated family dynamic. With her mother being ill and nonverbal, her father’s dominant, challenging presence creates constant tension in the household, leading to frequent toxic and unhealthy encounters. Jane must decide whether to finally seize her chance at freedom or remain a slave to her father’s will.
 
