--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>Film Producer</h3>
 
         <div class="intro-buttons">
-          <a href="JosiahKyleFelicianoResume.pdf" class="btn" download>Download Resume</a>
+          <a href="JosiahKyleFelicianoResume2.pdf" class="btn" download>Download Resume</a>
           <a href="#contact" class="btn btn-outline">Contact Me</a>
         </div>
 
@@ -82,6 +82,16 @@
         <p>
           A touching AAPI romance exploring LGBTQIA+ themes, <em>Under Seventh Heaven</em> delves into love, identity, and acceptance.
           Produced by Josiah Kyle Feliciano and directed by Shane Bennett, the film is set for submission to multiple festivals this year.
+        </p>
+      </div>
+    </div>
+
+    <div class="main-content">
+      <img src="img/isittrue.JPEG" alt="Is it true Poster" />
+      <div class="about-text">
+        <h2>Assistant Director | Circulating Festivals 2025-26</h2>
+        <p>
+          A young girl confronts vicious school gossip.
         </p>
       </div>
     </div>
